--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,3 +1,3 @@
 - name: Install linters
   run: |
-    npm install -g htmlhint stylelint eslint
+    npm install -g htmlhint stylelint stylelint-config-standard eslint
