--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,3 +21,6 @@ jobs:
           path: .
       - id: deployment
         uses: actions/deploy-pages@v4
+
+        - name: Checkout
+  uses: actions/checkout@v6.0.1
